Adjustable Time Strip view: column resizing - Column resizing now shows the horizontal resize handle on the Time axis swimlane only. Handle now uses `:height` from the extended overlay lines to extend across all swimlanes. - TODO: fix regressions in Plan/Gantt view affecting swimlane height and overflow handling.

--- a/src/ui/components/swim-lane/swimlane.scss
+++ b/src/ui/components/swim-lane/swimlane.scss
@@ -55,6 +55,7 @@
   &__handle {
     $size: $handleSize;
     $margin: $handleMargin;
+    z-index: 2;
 
     @include resizeHandleStyle($size, $margin);
 
@@ -69,7 +70,7 @@
     &.horizontal {
       // Resizes in X dimension
       left: auto;
-      right: -1 * $handleHitSize;
+      right: math.floor($handleHitSize * -0.5);
       width: $handleHitSize;
     }
   }
@@ -102,8 +103,7 @@
   }
 
   .is-editing & {
-    // TODO: BETTER SELECTOR TO LIMIT STYLING TO TIME STRIP IN MAIN VIEW, NOT NESTED VIEWS
-    grid-column-gap: $handleHitSize;
+    //grid-column-gap: $handleHitSize;
     .c-swimlane__handle {
       display: block;
     }
